Dope Sheet - Selecting a channel only partially selects the associated object #37883

Closed
opened 2013-12-19 18:31:12 +01:00 by Fabian Hernandez · 9 comments

System Information
OS X 10.9.1

Blender Version
Broken: Blender 2.69 r60991

Short description of error
Selecting a channel in Dope Sheet also selects the associated object in 3D View. However the object is not selected completely. It can be manipulated in 3D space as would be expected for a normal selected object, but all information in all tabs from the Properties window, the Node Editor and possibly others still relate to the previously selected object, which nota bene is not selected anymore (The Graph Editor correctly registers the new selection). In addition, switching the interaction mode for example to Edit Mode does so for the previously selected object, instead of for the currently selected one. In a scene with lots of objects with properties that need to be animated it can be very hard and time consuming to additionally select each object in 3D View in order to be able to animate its properties.

Exact steps for others to reproduce the error

  1. Open attached blend file "dopesheet-channelselect.blend" in Blender
  2. Notice that the red cube is selected
  3. In Dope Sheet, select Cube.green
  4. Notice that in 3D View the red cube is deselected and the green cube is selected. However in the Properties window, the material and all other information still relates to the red cube. Notice also that the Graph Editor has the option "Only include channels relating to selected objects and data" enabled, and correctly displays the channel for Cube.green.
  5. Manipulate the object in 3D View. For example, press 'g' and move the object around. It works for the selected object which is the green cube.
  6. Switch interaction mode, for example to Edit Mode. Notice that this is done for the red cube instead of for the green cube.
**System Information** OS X 10.9.1 **Blender Version** Broken: Blender 2.69 r60991 **Short description of error** Selecting a channel in Dope Sheet also selects the associated object in 3D View. However the object is not selected completely. It can be manipulated in 3D space as would be expected for a normal selected object, but all information in all tabs from the Properties window, the Node Editor and possibly others still relate to the previously selected object, which nota bene is not selected anymore (The Graph Editor correctly registers the new selection). In addition, switching the interaction mode for example to Edit Mode does so for the previously selected object, instead of for the currently selected one. In a scene with lots of objects with properties that need to be animated it can be very hard and time consuming to additionally select each object in 3D View in order to be able to animate its properties. **Exact steps for others to reproduce the error** 1. Open attached blend file "dopesheet-channelselect.blend" in Blender 2. Notice that the red cube is selected 3. In Dope Sheet, select Cube.green 4. Notice that in 3D View the red cube is deselected and the green cube is selected. However in the Properties window, the material and all other information still relates to the red cube. Notice also that the Graph Editor has the option "Only include channels relating to selected objects and data" enabled, and correctly displays the channel for Cube.green. 5. Manipulate the object in 3D View. For example, press 'g' and move the object around. It works for the selected object which is the green cube. 6. Switch interaction mode, for example to Edit Mode. Notice that this is done for the red cube instead of for the green cube.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @FabianHernandez

Added subscriber: @FabianHernandez
[dopesheet-channelselect.blend](https://archive.blender.org/developer/F46675/dopesheet-channelselect.blend)
Joshua Leung was assigned by Brecht Van Lommel 2013-12-19 18:41:49 +01:00

Added subscriber: @brecht

Added subscriber: @brecht

Blender makes a distinction between "selected objects" and the "active object", the latter is the one shown in the properties editor.

The dopesheet editor does not change the active object it seems, I'm not sure if that's intentional, so assigning to Joshua.

Blender makes a distinction between "selected objects" and the "active object", the latter is the one shown in the properties editor. The dopesheet editor does not change the active object it seems, I'm not sure if that's intentional, so assigning to Joshua.

This issue was referenced by blender/blender-addons-contrib@48b9680578

This issue was referenced by blender/blender-addons-contrib@48b96805789958318938f9032ae89d1f947c2811

This issue was referenced by 48b9680578

This issue was referenced by 48b96805789958318938f9032ae89d1f947c2811
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 48b9680578.

Closed by commit 48b9680578.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37883
No description provided.